--- a/src/modules/OfStock/OfStock.module.scss
+++ b/src/modules/OfStock/OfStock.module.scss
@@ -1,7 +1,7 @@
-@import "../../scssStyles/colors";
-@import "../../scssStyles/reset";
-@import "../../scssStyles/typography";
-@import "../../scssStyles/mixins";
+@import '../../scssStyles/colors';
+@import '../../scssStyles/reset';
+@import '../../scssStyles/typography';
+@import '../../scssStyles/mixins';
 
 $primary-text-color: #2d3748;
 
