--- a/src/modules/shared/components/BackBtn/backBtn.module.scss
+++ b/src/modules/shared/components/BackBtn/backBtn.module.scss
@@ -1,5 +1,5 @@
-@import "../../../../scssStyles/mixins";
-@import "../../../../scssStyles/colors";
+@import '../../../../scssStyles/mixins';
+@import '../../../../scssStyles/colors';
 
 .linkBack {
   display: flex;
