--- a/src/modules/CartPage/CartPage.module.scss
+++ b/src/modules/CartPage/CartPage.module.scss
@@ -1,5 +1,5 @@
-@import "../../scssStyles/colors";
-@import "../../scssStyles/mixins";
+@import '../../scssStyles/colors';
+@import '../../scssStyles/mixins';
 
 @mixin onBigScreen {
   @media (min-width: 1200px) {
@@ -10,12 +10,12 @@
 .Cart {
   display: flex;
   flex-direction: column;
-  
+
   margin: 0 auto;
   padding: 0 32px;
   padding-top: 110px; // header+40px
-  padding-bottom: 56px; 
-  @include onBigScreen{
+  padding-bottom: 56px;
+  @include onBigScreen {
     width: 1136px;
   }
 
@@ -40,7 +40,6 @@
     @include onTablet {
       font-size: 32px;
       margin-top: 24px;
-
     }
   }
 
@@ -72,5 +71,3 @@
     }
   }
 }
-
-
