--- a/src/modules/CartPage/CheckoutModal/CheckoutModal.module.scss
+++ b/src/modules/CartPage/CheckoutModal/CheckoutModal.module.scss
@@ -1,4 +1,4 @@
-@import "../../../scssStyles/colors";
+@import '../../../scssStyles/colors';
 
 .modal {
   display: flex;
@@ -37,7 +37,7 @@
   margin-bottom: 30px;
 }
 .loader:after {
-  content: "$";
+  content: '$';
   display: block;
   width: 48px;
   height: 48px;
