--- a/src/modules/CartPage/cartTotal/CartITotal.module.scss
+++ b/src/modules/CartPage/cartTotal/CartITotal.module.scss
@@ -1,4 +1,4 @@
-@import "../../../scssStyles/colors";
+@import '../../../scssStyles/colors';
 
 @mixin onDesktop {
   @media (min-width: 1200px) {
@@ -18,11 +18,10 @@
   align-items: center;
   min-width: 200px;
   background-color: $white-color;
-      box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.0);
-      transition: box-shadow 0.5s ease;
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 0.5s ease;
   &:hover {
     box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.3);
-
   }
 
   &__sum {
