--- a/src/modules/CartPage/emptyCart/EmptyCart.module.scss
+++ b/src/modules/CartPage/emptyCart/EmptyCart.module.scss
@@ -1,5 +1,5 @@
-@import "../../../scssStyles/colors";
-@import "../../../scssStyles/mixins";
+@import '../../../scssStyles/colors';
+@import '../../../scssStyles/mixins';
 
 .emptyCart {
   display: flex;
