--- a/src/modules/OfStock/Desert/Desert.module.scss
+++ b/src/modules/OfStock/Desert/Desert.module.scss
@@ -17,7 +17,8 @@
   position: absolute;
   top: 0;
   left: -5rem;
-  background: url(https://cdn-icons-png.flaticon.com/512/1171/1171228.png) no-repeat center;
+  background: url(https://cdn-icons-png.flaticon.com/512/1171/1171228.png)
+    no-repeat center;
   background-size: cover;
   width: 5rem;
   height: 5rem;
