--- a/src/modules/PhoneDetailsPage/Specs/Specs.module.scss
+++ b/src/modules/PhoneDetailsPage/Specs/Specs.module.scss
@@ -1,9 +1,8 @@
 @import '../../HomePage/MainSlider/Slider_mixins.scss';
 
-@mixin font{
+@mixin font {
   font-family: Mont;
 }
-
 
 .specs {
   &_container {
@@ -14,7 +13,7 @@
       grid-template-columns: repeat(4, 1fr);
       column-gap: 16px;
     }
-  
+
     @include onTablet {
       margin: 0 auto;
       width: 592px;
@@ -22,7 +21,7 @@
       grid-template-columns: repeat(12, 1fr);
       column-gap: 16px;
     }
-  
+
     @include onDesktop {
       margin: 0 auto;
       width: 1136px;
@@ -30,11 +29,9 @@
       grid-template-columns: repeat(24, 1fr);
       column-gap: 16px;
     }
-   
   }
 
   &_about {
-    
     @include onMobile {
       grid-column: 1 / 5;
       margin-top: 55px;
@@ -44,11 +41,11 @@
       grid-column: 1/ 12;
       margin-top: 64px;
     }
-  
+
     @include onDesktop {
       grid-column: 1 / 13;
     }
-    
+
     grid-column: 1 / 13;
 
     &_header {
@@ -67,44 +64,40 @@
 
     &_value {
       @include font;
-      color: #89939A;
+      color: #89939a;
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
-      line-height: 21px
+      line-height: 21px;
     }
 
     &_section:not(:last-child) {
       margin-bottom: 32px;
-
     }
-
   }
 
   &_tech {
-  
     @include onMobile {
       grid-column: 1 / 5;
       margin-top: 55px;
     }
-  
+
     @include onTablet {
       grid-column: 1/ 12;
       margin-top: 64px;
     }
-  
+
     @include onDesktop {
       grid-column: 14 / 25;
     }
-    
-    
+
     &_name {
       @include font;
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
       line-height: 21px;
-      color: #89939A
+      color: #89939a;
     }
 
     &_value {
@@ -124,8 +117,6 @@
       margin-bottom: 8px;
       display: flex;
       justify-content: space-between;
-
     }
-
   }
 }
