--- a/src/modules/shared/components/loader/loader.module.scss
+++ b/src/modules/shared/components/loader/loader.module.scss
@@ -4,7 +4,8 @@
   height: 50px;
 }
 
-.loader_element:before , .loader_element:after{
+.loader_element:before,
+.loader_element:after {
   content: '';
   border-radius: 50%;
   position: absolute;
@@ -17,24 +18,26 @@
 }
 
 @keyframes rotate {
-  0% {  transform: rotate(0)}
-  100% { transform: rotate(360deg)}
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .loader {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed; 
-  z-index: 1; 
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 
-  background-color: rgb(15, 15, 17); 
-  background-color: rgba(15, 15, 17, 0.4); 
-
+  background-color: rgb(15, 15, 17);
+  background-color: rgba(15, 15, 17, 0.4);
 }
-
